# view-and-review

./: .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.dep.yml  docker-compose.deps.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yaml  test.py
django/: Dockerfile  Dockerfile.dev  Makefile  entrypoint.sh  install-firefox.sh  pyproject.toml  run.sh
django/features/: delete_user.feature  environment.py  make_rating.feature  make_review.feature  register_user.feature  view_movie.feature  vote_review.feature
django/features/steps/: authentication.py  delete_user.py  rating_movie.py  register_user.py  review_movie.py  view_movie.py  vote_review.py
django/project/: settings.py  urls.py  wsgi.py
django/project/settings/: base.py  dep.py  deps.py  prod.py
django/templates/: base_generic.html  footer.html  navbar.html  profile.html  rating.html
django/templates/auth/: profile.html  profile_settings.html  user-confirm-delete.html  user-deleted.html  user_confirm_delete.html
django/templates/registration/: login.html  logout.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  register.html
django/web/: admin.py  api.py  forms.py  models.py  urls.py  views.py
django/web/migrations/: 0001_initial.py  0002_alter_rating_review.py  0002_myprofile.py  0002_rating_film_rating_score_rating_site_rating_user_and_more.py  0002_review_user.py  0003_alter_myprofile_favlist_alter_myprofile_watchlist.py  0003_alter_rating_review.py  (+25 more)
(+78 files in other folders)
