[tool.poetry]
name = "view-and-review"
version = "0.1.0"
description = ""
authors = ["jordigarciaventura <jordigarciaventura@gmail.com>"]
readme = "README.md"
# packages = [{include = "view_and_review"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
django-environ = "^0.10.0"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
django-csp = "^3.7"
behave = "^1.2.6"
django-bootstrap-v5 = "^1.0.11"
django-compressor = "^4.3.1"
django-libsass = "^0.9"
tmdbv3api = "^1.7.7"
splinter = "^0.19.0"
behave-django = "^1.4.0"
behave-webdriver = "^0.3.1"
django-permissions-policy = "^4.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"